@@ -5,7 +5,7 @@ Tags: woocommerce, brands, brand taxonomy, product brands, woocommerce manufactu
 Requires at least: 4.7
 Tested up to: 5.1
 Requires PHP: 5.6
-Stable tag: 1.7.2
+Stable tag: 1.7.3
 License: GPL3
 License URI: http://www.gnu.org/licenses/gpl-3.0.en.html
 
@@ -83,6 +83,7 @@ You can also contribute [translating the plugin](https://translate.wordpress.org
 == Changelog ==
 = 1.7.3 =
 * Enhancement: Performance improvements
+* Fix: Breadcrumbs doesn't take in account pagination
 = 1.7.2 =
 * Feature: Now is possible to use %pwb-brand% in the product URLs
 * Fix: Fatal error in some themes (like Salient)
